--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Anders Holm - My knowledge journey
 description: A book a week - why not?
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://www.youthvillage.co.za/wp-content/uploads/2016/03/read-768x512.jpg
 
 #
 # Flags below are optional
@@ -19,12 +19,12 @@ future: true
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: aholmer89@gmail.com
   facebook:
   flickr:
   github:
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/anders-holm-5a16a7a9/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
