--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   flickr:
   github:
   instagram:
-  linkedin: https://www.linkedin.com/in/anders-holm-5a16a7a9/
+  linkedin: anders-holm-5a16a7a9
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
